--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script: pip install docker-compose
 
 script:
   # - docker-compose up
-  - run app sh -c "python manage.py test && flake8"
+  - docker-compose up run app sh -c "python manage.py test && flake8"
