--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
-version: "3.9"
+version: "3"
 
-services: 
+services:
+  db:
+    image: postgres:10-alpine
+    environment: 
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+
   app:
     build: 
       context: .
@@ -8,7 +15,8 @@ services:
       - "8000:8000"
     volumes: 
       - ./app:/app
-    command: sh -c "python manage.py wait_for_db &&
+    command: sh -c "while !</dev/tcp/db/5432; do sleep 1;done; \
+                      python manage.py wait_for_db &&
                       python manage.py migrate &&
                       python manage.py runserver 0.0.0.0:8000"
     environment: 
@@ -19,9 +27,3 @@ services:
     depends_on: 
       - db
 
-  db:
-    image: postgres:9.6-alpine
-    environment: 
-      - POSTGRES_DB=app
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
