--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,6 @@
-version: "3"
+version: "3.9"
 
-services:
-  db:
-    image: postgres:10-alpine
-    environment: 
-      - POSTGRES_DB=app
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-
+services: 
   app:
     build: 
       context: .
@@ -15,9 +8,7 @@ services:
       - "8000:8000"
     volumes: 
       - ./app:/app
-    command: sh -c "while !</dev/tcp/db/5432; do sleep 1;done; \
-                      python manage.py wait_for_db &&
-                      python manage.py migrate &&
+    command: sh -c "python manage.py migrate &&
                       python manage.py runserver 0.0.0.0:8000"
     environment: 
       - DB_HOST=db
@@ -27,3 +18,9 @@ services:
     depends_on: 
       - db
 
+  db:
+    image: postgres:10-alpine
+    environment: 
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
