--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_insta:
-  - docker-compose up -d
+  - docker-compose up
   - docker ps
 
 before_script: pip install docker-compose
